# agent-dev-templates

./: .gitignore  Makefile  README.md  pyproject.toml
.agents/skills/repo-os-brownfield-intake/: SKILL.md
.agents/skills/repo-os-brownfield-intake/agents/: openai.yaml
.agents/skills/repo-os-brownfield-intake/references/: brownfield-rubric.md
.agents/skills/repo-os-brownfield-intake/scripts/: verify_governance.sh
.agents/skills/repo-os-greenfield-bootstrap/: SKILL.md
.agents/skills/repo-os-greenfield-bootstrap/scripts/: verify_governance.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-pypi.yml
docs/maintainers/: publish-workflow.md
sandbox/: README.md
sandbox/brownfield-intake-test/: CONSTITUTION.md  CURRENT_STATE.md  NORTHSTAR.md  PRD.md  pyproject.toml
scripts/: check-governance  verify-template
src/agentic_dev/: __init__.py  census.py  cli.py
src/agentic_devkit/: __init__.py  cli.py  traceability.py
src/agentic_devkit/templates/greenfield-dev-os/: copier.yml
templates/brownfield-dev-overlay/: copier.yml
templates/brownfield-dev-overlay/template/: AGENTS.md  APPLY.md  CONSTITUTION.md  CURRENT_STATE.md  CURRENT_STATE.md.jinja  MIGRATION_GUARDRAILS.md  NORTHSTAR.md  NORTHSTAR_METRICS.md  PRD.md
templates/brownfield-dev-overlay/template/.github/: copilot-instructions.md
templates/brownfield-dev-overlay/template/specs/: registry.yaml
templates/greenfield-dev-os/: copier.yml
templates/greenfield-dev-os/template/: AGENTS.md  CLAUDE.md  Makefile.jinja  NORTHSTAR.md  NORTHSTAR_METRICS.md
templates/greenfield-dev-os/template/.github/: copilot-instructions.md
templates/greenfield-dev-os/template/skills/: README.md
templates/greenfield-dev-os/template/specs/: registry.yaml
tests/: test_brownfield_intake_sandbox.py  test_cli_init.py  test_cli_version.py  test_traceability.py  test_traceability_templates.py
(+45 files in other folders)
