[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-dev-templates"
version = "0.1.0"
description = "Catalog of agentic documentation operating system templates (greenfield + brownfield overlay)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "copier>=9.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
agentic-dev = "agentic_dev.cli:main"

[tool.uv]
dev-dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
