[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-devkit"
version = "0.1.1"
description = "CLI and catalog for agentic documentation OS templates (greenfield + brownfield overlay)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "copier>=9.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
agentic-dev = "agentic_dev.cli:main"
agentic-devkit = "agentic_dev.cli:main"

[tool.uv]
dev-dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
