[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-devkit"
version = "0.1.6"
description = "CLI and catalog for agentic documentation OS templates (greenfield + brownfield overlay)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "copier>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agentic-dev = "agentic_devkit.cli:main"
agentic-devkit = "agentic_devkit.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic_devkit = ["templates/**"]
